--- a/pizza.html
+++ b/pizza.html
@@ -14,6 +14,6 @@
 				<input type="submit" value="Envia"/><input type="reset" value="Neteja"/>
 			</font>
 		</form>
-		Nom de l'administrador/desenvolupador: dacomo per pj9f4a9.3<br>
+		Nom de l'administrador/desenvolupador: asix2 per pj9f4a9.4<br>
 	</body>
 </html>
