Commit final de l'aplicatiu pizzes

--- a/pizza.html
+++ b/pizza.html
@@ -14,6 +14,6 @@
 				<input type="submit" value="Envia"/><input type="reset" value="Neteja"/>
 			</font>
 		</form>
-		Nom de l'administrador/desenvolupador: asix2 202601111901<br>
+		Nom de l'administrador/desenvolupador: dacomo pj9 (DevOps i Cloud Computing)<br>
 	</body>
 </html>
